--- a/lab_4/Dirichlet/report/titul.tex
+++ b/lab_4/Dirichlet/report/titul.tex
@@ -69,7 +69,7 @@
 \times \left[0, \, 1\right]$, функции $\xi\left(\cdot\right), \eta\left(\cdot\right)$ 
 непрерывно дифференцируемы на отрезке $\left[0, \, 1\right]$, а вещественный параметр $\mu > 0$.
 
-Для данной задачи нужно реализовать алгоритм поиска численного решения, основанный
+Для данной задачи нужно построить алгоритм поиска численного решения, основанный
 на быстром преобразовании Фурье, а именно необходимо реализовать функцию 
 solveDirichlet(fHandle, xiHandle, etaHandle, mu, N, M), возвращающую значение решения на сетке размера N на M.
 Первые три аргумента функции представляют собой указатели на функции $f\left(\cdot\, , \, \cdot\right), \ \xi\left(\cdot\right), \ \eta\left(\cdot\right)$ соответственно. Затем
@@ -152,7 +152,7 @@ $\dfrac{1}{MN}\sum\limits_{s=0}^{N-1}\sum\limits_{p=0}^{M-1}\dfrac{1}{c_{s,p}}e^
 
 Правая часть системы вычиляется так же с помощью прямого преобразования fft.
 
-Решив систему, рассмотрим матрицу $\Phi = \left\{\phi_{k,m}\right\},\ k = 1,\ldots,N-1, \ m = 1,\ldots,M-1$.
+Решив систему, построим матрицу $\left\{\phi_{k,m}\right\},\ k = 1,\ldots,N-1, \ m = 1,\ldots,M-1$.
 Применяя к ней двумерное обратное преобразование Фурье (ifft2), находим матрицу
  $\left\{b_{s,p}\right\},\ s = 1,\ldots,N-1, \ p = 1,\ldots,M-1$.
 С помощью формулы (\ref{ac=b}) вычислим значения $\left\{a_{s,p}\right\},\ s = 1,\ldots,N-1, \ p = 1,\ldots,M-1$ и применим к ним
@@ -218,7 +218,7 @@ $$c_2 = \frac{1}{2\sqrt{\mu}\left(1+\sqrt{\mu}\right)}y^2e^{y\left(1+\sqrt{\mu}\
 -\frac{1}{2\sqrt{\mu}\left(1+\sqrt{\mu}\right)^2}ye^{y\left(1+\sqrt{\mu}\right)}
 +\frac{1}{2\sqrt{\mu}\left(1+\sqrt{\mu}\right)^3}e^{y\left(1+\sqrt{\mu}\right)}+d_2.$$
 
-Как и раньше переобозная $c_1 = c_1(y) + d_1, \ c_2 = c_2(y) + d_2$, получаем общее решение задачи (\ref{bvp2}) в виде
+Как и раньше переобозначая $c_1 = c_1(y) + d_1, \ c_2 = c_2(y) + d_2$, получаем общее решение задачи (\ref{bvp2}) в виде
 
 $$u_2(y) = (c_1(y) + d_1))e^{\sqrt{\mu}y} + (c_2(y) + d_2) e^{-\sqrt{\mu}y},$$
 постоянные $d_1, d_2$ являются решениями системы
@@ -298,7 +298,7 @@ $\mu,\ u_1^0,\ u_2^0$.\\
 \end{center}
 
 \newpage
-Рассмотрим теперь $f(x, y) = \cos(xy^2)e^{x-y}, \xi(x) = 0, \eta(y) = 0$. 
+Рассмотрим теперь $f(x, y) = \cos(xy^2)e^{x-y}, \quad \xi(x) = 0, \quad \eta(y) = 0$. 
 
 \noindent
 \includegraphics[width=0.51\textwidth]{some5.eps}
